--- a/src/components/MainHead.astro
+++ b/src/components/MainHead.astro
@@ -1,9 +1,6 @@
 ---
 import '../styles/global.css';
-const {
-	title = 'Jeanine White: Personal Site',
-	description = 'The personal site of Jeanine White',
-} = Astro.props;
+const { title = 'kmtym1998', description = 'Ryohei KOMATSUYAMA' } = Astro.props;
 ---
 
 <meta charset="UTF-8" />
@@ -16,6 +13,6 @@ const {
 <link rel="preconnect" href="https://fonts.googleapis.com" />
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 <link
-	href="https://fonts.googleapis.com/css2?family=Inter:wght@200;400;700;900&display=swap"
-	rel="stylesheet"
+  href="https://fonts.googleapis.com/css2?family=Inter:wght@200;400;700;900&display=swap"
+  rel="stylesheet"
 />
