--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -1,99 +1,94 @@
 <nav>
-	<a class="link" href="/">
-		<div class="monogram">JW</div>
-	</a>
-	<a class="link" href="/projects/"> Portfolio</a>
-	<a class="link" href="/about/"> About</a>
-	<div class="socials">
-		<a class="social" href="https://twitter.com/me">
-			<svg class="socialIcon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16">
-				<path
-					d="M5.026 15c6.038 0 9.341-5.003 9.341-9.334 0-.14 0-.282-.006-.422A6.685 6.685 0 0 0 16 3.542a6.658 6.658 0 0 1-1.889.518 3.301 3.301 0 0 0 1.447-1.817 6.533 6.533 0 0 1-2.087.793A3.286 3.286 0 0 0 7.875 6.03a9.325 9.325 0 0 1-6.767-3.429 3.289 3.289 0 0 0 1.018 4.382A3.323 3.323 0 0 1 .64 6.575v.045a3.288 3.288 0 0 0 2.632 3.218 3.203 3.203 0 0 1-.865.115 3.23 3.23 0 0 1-.614-.057 3.283 3.283 0 0 0 3.067 2.277A6.588 6.588 0 0 1 .78 13.58a6.32 6.32 0 0 1-.78-.045A9.344 9.344 0 0 0 5.026 15z"
-				></path>
-			</svg>
-		</a>
-		<a class="social" href="https://github.com/me">
-			<svg class="socialIcon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16">
-				<path
-					d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z"
-				></path>
-			</svg>
-		</a>
-		<a class="social" href="https://dev.to/me">
-			<svg
-				class="socialIcon"
-				xmlns="http://www.w3.org/2000/svg"
-				viewBox="0 0 50 40"
-				style="enable-background:new 0 0 50 40"
-				xml:space="preserve"
-			>
-				<path
-					d="M15.7 15.5c-.4-.3-.7-.4-1.1-.4h-1.7v10.1h1.7c.4 0 .8-.1 1.1-.4.4-.3.6-.7.6-1.3v-6.7c0-.6-.2-1-.6-1.3z"
-				></path>
-				<path
-					d="M47 0H3C1.3 0 0 1.3 0 3v34c0 1.7 1.3 3 3 3h44c1.7 0 3-1.3 3-3V3c0-1.7-1.3-3-3-3zM19.1 23.5c0 1.3-.4 2.4-1.3 3.2-.8.9-1.9 1.3-3.3 1.3h-4.4V12.3h4.5c1.3 0 2.4.4 3.2 1.3.8.8 1.3 1.9 1.3 3.2v6.7zm9.1-8.4h-5.1v3.6h3.1v2.8h-3.1v3.7h5.1V28h-5.9c-.6 0-1-.2-1.4-.6-.4-.4-.6-.8-.6-1.4V14.2c0-.6.2-1 .6-1.4.4-.4.8-.6 1.4-.6h5.9v2.9zM37.5 26c-.6 1.3-1.3 2-2.2 2-.9 0-1.7-.7-2.2-2l-3.7-13.8h3.1L35.3 23l2.8-10.8h3.1L37.5 26z"
-				></path>
-			</svg>
-		</a>
-	</div>
+  <a class="link" href="/">
+    <div class="monogram">KR</div>
+  </a>
+  <a class="link" href="#Profile"> プロフィール</a>
+  <a class="link" href="#History"> 略歴</a>
+  <a class="link" href="#Skills"> スキル</a>
+  <div class="socials">
+    <a class="social" href="https://github.com/kmtym1998" target="_blank">
+      <svg
+        class="socialIcon"
+        xmlns="http://www.w3.org/2000/svg"
+        width="32"
+        height="32"
+        viewBox="0 0 32 32"
+        ><path
+          d="M16 0.396c-8.839 0-16 7.167-16 16 0 7.073 4.584 13.068 10.937 15.183 0.803 0.151 1.093-0.344 1.093-0.772 0-0.38-0.009-1.385-0.015-2.719-4.453 0.964-5.391-2.151-5.391-2.151-0.729-1.844-1.781-2.339-1.781-2.339-1.448-0.989 0.115-0.968 0.115-0.968 1.604 0.109 2.448 1.645 2.448 1.645 1.427 2.448 3.744 1.74 4.661 1.328 0.14-1.031 0.557-1.74 1.011-2.135-3.552-0.401-7.287-1.776-7.287-7.907 0-1.751 0.62-3.177 1.645-4.297-0.177-0.401-0.719-2.031 0.141-4.235 0 0 1.339-0.427 4.4 1.641 1.281-0.355 2.641-0.532 4-0.541 1.36 0.009 2.719 0.187 4 0.541 3.043-2.068 4.381-1.641 4.381-1.641 0.859 2.204 0.317 3.833 0.161 4.235 1.015 1.12 1.635 2.547 1.635 4.297 0 6.145-3.74 7.5-7.296 7.891 0.556 0.479 1.077 1.464 1.077 2.959 0 2.14-0.020 3.864-0.020 4.385 0 0.416 0.28 0.916 1.104 0.755 6.4-2.093 10.979-8.093 10.979-15.156 0-8.833-7.161-16-16-16z"
+        ></path>
+      </svg>
+    </a>
+
+    <a class="social" href="https://github.com/kmtym1998/me" target="_blank">
+      <svg
+        class="socialIcon"
+        xmlns="http://www.w3.org/2000/svg"
+        id="mdi-source-repository"
+        viewBox="0 0 24 24"
+        ><path
+          d="M6,2H18A2,2 0 0,1 20,4V20A2,2 0 0,1 18,22H6A2,2 0 0,1 4,20V4A2,2 0 0,1 6,2M12.75,13.5C15.5,13.5 16.24,11.47 16.43,10.4C17.34,10.11 18,9.26 18,8.25C18,7 17,6 15.75,6C14.5,6 13.5,7 13.5,8.25C13.5,9.19 14.07,10 14.89,10.33C14.67,11 14,12 12,12C10.62,12 9.66,12.35 9,12.84V8.87C9.87,8.56 10.5,7.73 10.5,6.75C10.5,5.5 9.5,4.5 8.25,4.5C7,4.5 6,5.5 6,6.75C6,7.73 6.63,8.56 7.5,8.87V15.13C6.63,15.44 6,16.27 6,17.25C6,18.5 7,19.5 8.25,19.5C9.5,19.5 10.5,18.5 10.5,17.25C10.5,16.32 9.94,15.5 9.13,15.18C9.41,14.5 10.23,13.5 12.75,13.5M8.25,16.5A0.75,0.75 0 0,1 9,17.25A0.75,0.75 0 0,1 8.25,18A0.75,0.75 0 0,1 7.5,17.25A0.75,0.75 0 0,1 8.25,16.5M8.25,6A0.75,0.75 0 0,1 9,6.75A0.75,0.75 0 0,1 8.25,7.5A0.75,0.75 0 0,1 7.5,6.75A0.75,0.75 0 0,1 8.25,6M15.75,7.5A0.75,0.75 0 0,1 16.5,8.25A0.75,0.75 0 0,1 15.75,9A0.75,0.75 0 0,1 15,8.25A0.75,0.75 0 0,1 15.75,7.5Z"
+        ></path>
+      </svg>
+    </a>
+  </div>
 </nav>
 
 <style>
-	nav {
-		display: flex;
-		gap: 1rem;
-		align-items: center;
-		padding: 1rem;
-	}
+  nav {
+    display: flex;
+    gap: 1rem;
+    align-items: center;
+    padding: 1rem;
+  }
 
-	.link {
-		color: var(--t-subdue);
-		display: block;
-		text-decoration: none;
-		font-size: var(--f-d1);
-		text-transform: uppercase;
-		padding-top: 0.75em;
-		padding-bottom: 0.75em;
-	}
+  .link {
+    color: var(--t-subdue);
+    display: block;
+    text-decoration: none;
+    font-size: var(--f-d1);
+    text-transform: uppercase;
+    padding-top: 0.75em;
+    padding-bottom: 0.75em;
+  }
 
-	.link:hover,
-	.link:focus {
-		color: var(--t-active);
-	}
+  .link:hover,
+  .link:focus {
+    color: var(--t-active);
+  }
 
-	.monogram {
-		display: flex;
-		align-items: center;
-		justify-content: center;
-		width: 2em;
-		height: 2em;
-		margin-right: 0.5rem;
-		color: var(--c-black);
-		font-weight: 900;
-		letter-spacing: -0.125rem;
-		border: 3px solid currentColor;
-		border-radius: 50%;
-	}
+  .monogram {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 2em;
+    height: 2em;
+    margin-right: 0.5rem;
+    color: var(--c-black);
+    font-weight: 900;
+    letter-spacing: -0.125rem;
+    border: 3px solid currentColor;
+    border-radius: 50%;
+  }
 
-	.socials {
-		display: flex;
-		gap: 0.75em;
-		margin-left: auto;
-	}
+  .socials {
+    display: flex;
+    gap: 0.75em;
+    margin-left: auto;
+  }
 
-	.social {
-		display: block;
-	}
+  .social {
+    display: block;
+  }
 
-	.socialIcon {
-		display: block;
-		width: 1.25rem;
-		height: 1.25rem;
-		fill: var(--t-subdue);
-		transition: fill linear 150ms;
-	}
+  .socialIcon {
+    display: block;
+    width: 1.25rem;
+    height: 1.25rem;
+    fill: var(--t-subdue);
+    transition: fill linear 150ms;
+  }
 
-	.socialIcon:hover {
-		fill: var(--t-active);
-	}
+  .socialIcon:hover {
+    fill: var(--t-active);
+  }
 </style>
