--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -205,8 +205,8 @@ import { Profile } from '../components/Profile';
         width="1600"
         height="1000"
         class="img"
-        src="/assets/alligator_medium.jpg"
-        srcset="/assets/alligator_medium.jpg"
+        src="https://raw.githubusercontent.com/kmtym1998/me/main/public/assets/alligator_medium.jpg"
+        srcset="https://raw.githubusercontent.com/kmtym1998/me/main/public/assets/alligator_medium.jpg"
         sizes="(max-width: 800px) 800px, (max-width: 1200px) 1200px, (max-width: 1600px) 1600px, (max-width: 2400px) 2400px, 1200px"
       />
       <div class="gradient"></div>
