--- a/src/components/MainHead.astro
+++ b/src/components/MainHead.astro
@@ -16,3 +16,7 @@ const { title = 'kmtym1998', description = 'Ryohei KOMATSUYAMA' } = Astro.props;
   href="https://fonts.googleapis.com/css2?family=Inter:wght@200;400;700;900&display=swap"
   rel="stylesheet"
 />
+<link
+  href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400&display=swap"
+  rel="stylesheet"
+/>
