--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -1,5 +1,5 @@
 <nav>
-  <a class="link" href="/">
+  <a class="link" href="/me/">
     <div class="monogram">KR</div>
   </a>
   <a class="link" href="#Profile"> プロフィール</a>
