disable skillsets javascript

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -263,7 +263,7 @@ import { SkillSets } from '../components/SkillSets';
       <div class="section">
         <h4 id="Skills" class="sectionTitle">スキル</h4>
         <p class="bio">
-          <SkillSets client:load />
+          <SkillSets />
         </p>
       </div>
 
