--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -19,6 +19,18 @@ import { SkillSets } from '../components/SkillSets';
       title="kmtym1998"
       description="The personal website of KOMATSUYAMA Ryohei"
     />
+
+    <!-- <script src="/wasm_exec.js" is:inline></script>
+    <script>
+      const go = new Go();
+      WebAssembly.instantiateStreaming(
+        fetch('main.wasm'),
+        go.importObject,
+      ).then((result) => {
+        go.run(result.instance);
+      });
+    </script> -->
+
     <style>
       .wrapper {
         margin-top: 2em;
