--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -280,7 +280,7 @@ import { SkillSets } from '../components/SkillSets';
       </div>
 
       <div class="section">
-        <h2 id="GitHubMetrics" class="sectionTitle">GitHub 活動状況</h2>
+        <h2 id="GitHubMetrics" class="sectionTitle">アクティビティ</h2>
 
         <div class="metricsContainer">
           <div class="metricsRow">
