--- a/src/styles/skillSets.css
+++ b/src/styles/skillSets.css
@@ -1,39 +1,53 @@
 .container {
-  flex-wrap: wrap;
-  justify-content: flex-start;
   display: flex;
   width: 100%;
 }
 
-.tooltip {
-  position: relative;
-  cursor: pointer;
-  padding: 0 5px;
-  font-size: 0.9em;
-  color: #4682b4;
+@media (min-width: 750px) {
+  .container {
+    justify-content: flex-start;
+    flex-wrap: wrap;
+  }
+  .tooltip {
+    position: relative;
+    cursor: pointer;
+    padding: 0 5px;
+    font-size: 0.9em;
+    color: #4682b4;
+  }
+  .description {
+    position: absolute;
+    max-width: 120px;
+    left: 50%;
+    bottom: 80%;
+    transform: translateX(-50%);
+    margin-bottom: 8px;
+    padding: 8px;
+    border-radius: 3px;
+    background-color: #666;
+    font-size: var(--f-d1);
+    color: #fff;
+    text-align: center;
+    visibility: hidden;
+    opacity: 0;
+    z-index: 1;
+    transition: 0.3s all;
+  }
+
+  .tooltip:hover .description {
+    bottom: 90%;
+    visibility: visible;
+    opacity: 1;
+  }
 }
 
-.description {
-  position: absolute;
-  max-width: 120px;
-  left: 50%;
-  bottom: 80%;
-  transform: translateX(-50%);
-  margin-bottom: 8px;
-  padding: 8px;
-  border-radius: 3px;
-  background-color: #666;
-  font-size: var(--f-d1);
-  color: #fff;
-  text-align: center;
-  visibility: hidden;
-  opacity: 0;
-  z-index: 1;
-  transition: 0.3s all;
-}
-
-.tooltip:hover .description {
-  bottom: 90%;
-  visibility: visible;
-  opacity: 1;
+@media (max-width: 750px) {
+  .container {
+    overflow-x: scroll;
+    overflow-y: hidden;
+  }
+  .description {
+    visibility: hidden;
+    display: none;
+  }
 }
