--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,6 +3,8 @@
 import MainHead from '../components/MainHead.astro';
 import Nav from '../components/Nav.astro';
 import Footer from '../components/Footer.astro';
+import Activity from '../components/Activity.astro';
+import Articles from '../components/Articles.astro';
 import { Profile } from '../components/Profile';
 import { History } from '../components/History';
 import { SkillSets } from '../components/SkillSets';
@@ -204,34 +206,6 @@ import { SkillSets } from '../components/SkillSets';
         font-weight: 700;
         font-size: var(--f-u4);
       }
-
-      .metricsContainer {
-        text-align: center;
-        justify-content: space-around;
-      }
-
-      @media (max-width: 750px) {
-        .metricsRow {
-          width: 100%;
-        }
-        .metricsContainer {
-          display: block;
-        }
-      }
-      @media (min-width: 750px) {
-        .metricsRow {
-          width: 48%;
-        }
-        .metricsContainer {
-          display: flex;
-        }
-      }
-
-      .metricsImg {
-        width: 100%;
-        max-width: 600px;
-        text-align: center;
-      }
     </style>
   </head>
 
@@ -280,37 +254,13 @@ import { SkillSets } from '../components/SkillSets';
       </div>
 
       <div class="section">
+        <h2 id="Articles" class="sectionTitle">記事</h2>
+        <Articles />
+      </div>
+
+      <div class="section">
         <h2 id="GitHubMetrics" class="sectionTitle">アクティビティ</h2>
-
-        <div class="metricsContainer">
-          <div class="metricsRow">
-            <img
-              alt="🦑"
-              src="https://raw.githubusercontent.com/kmtym1998/kmtym1998/main/general.svg"
-              class="metricsImg"
-            />
-          </div>
-
-          <div class="metricsRow">
-            <a href="https://github.com/kmtym1998/hasuraenv" target="_blank">
-              <img
-                alt="🦑"
-                src="https://raw.githubusercontent.com/kmtym1998/kmtym1998/main/metrics.plugin.repositories.svg"
-                class="metricsImg"
-              />
-            </a>
-            <img
-              alt="🦑"
-              src="https://raw.githubusercontent.com/kmtym1998/kmtym1998/main/metrics.plugin.reactions.svg"
-              class="metricsImg"
-            />
-            <img
-              alt="🦑"
-              src="https://raw.githubusercontent.com/kmtym1998/kmtym1998/main/achievements.svg"
-              class="metricsImg"
-            />
-          </div>
-        </div>
+        <Activity />
       </div>
     </main>
 
