--- a/src/components/MainHead.astro
+++ b/src/components/MainHead.astro
@@ -20,3 +20,19 @@ const { title = 'kmtym1998', description = 'Ryohei KOMATSUYAMA' } = Astro.props;
   href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400&display=swap"
   rel="stylesheet"
 />
+
+<!-- Google tag (gtag.js) -->
+<script
+  async
+  src="https://www.googletagmanager.com/gtag/js?id=G-E7RQ90MN6Y"
+  type="text/partytown"
+></script>
+<script type="text/partytown">
+  window.dataLayer = window.dataLayer || [];
+  function gtag() {
+    dataLayer.push(arguments);
+  }
+  gtag('js', new Date());
+
+  gtag('config', 'G-E7RQ90MN6Y');
+</script>
