--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -17,7 +17,7 @@ import Nav from '../components/Nav.astro';
 	<body>
 		<Nav />
 		<div class="wrapper">
-			<h1>Page Not Found</h1>
+			<h1>Page Not Found!</h1>
 			<p>Not found</p>
 		</div>
 		<Footer />
