--- a/src/components/Articles.astro
+++ b/src/components/Articles.astro
@@ -1,7 +1,7 @@
 ---
-import articlesData from '../articlesConfig/config.json';
-import { getPageOGPMetadata } from '../articlesConfig/getOGPMetadata';
-import type { Metadata } from '../articlesConfig/type';
+import articlesData from '../configs/articles/config.json';
+import { getPageOGPMetadata } from '../configs/articles/getOGPMetadata';
+import type { Metadata } from '../configs/articles/type';
 import { ArticleCard } from './ArticleCard';
 
 type ArticleConfig = {
