--- a/src/components/MainHead.astro
+++ b/src/components/MainHead.astro
@@ -9,7 +9,7 @@ const { title = 'kmtym1998', description = 'Ryohei KOMATSUYAMA' } = Astro.props;
 <meta name="generator" content={Astro.generator} />
 <title>{title}</title>
 
-<link rel="icon" type="image/svg+xml" href="/favicon.ico" />
+<link rel="icon" type="image/svg+xml" href="/me/favicon.ico" />
 <link rel="preconnect" href="https://fonts.googleapis.com" />
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 <link
